# NotSora

./: .gitignore
frontend/: package.json  pnpm-lock.yaml  tailwind.config.js  tailwind.config.ts
frontend/src/: App.tsx
frontend/src/components/: VideoPromptPlayer.tsx
frontend/src/components/ui/: VideoPromptPlayer.tsx
inference_server/: pyproject.toml
inference_server/inference_server/: app.py
inference_server/inference_server/groq/: infer.py  populate_db.py  rag.py
inference_server/tests/: test_inference_server.py
renderer/: pyproject.toml
renderer/renderer/: app.py
renderer/renderer/utils/: render_utils.py
